test/bad/functions/type06.px

func f(y: Int = 0): Void def
    return

g = f
g()
